crates/htui-core/tests/snapshots/prompt_render__section_box_stand_in.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: "render::wrap(&render::box_profile(&spec.box_profile, HostnameLine::StandIn))"
---
<section name="box">
hostname: [hostname]
os: windows 10.0.26200 (x86_64)
cpu: AMD Ryzen 9 7950X, 32 threads
ram: 65536 MB
gpu: nvidia
htui: 0.4.1
tools: cargo 1.98.1, git 2.47.0, node 22.12.0, python 3.13.1, rustc 1.98.1
quirks: MSVC toolchain only; no WSL; long paths enabled.
</section>
