crates/htui-core/tests/snapshots/prompt_render__section_documents_review.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: rendered
---
<section name="documents:review" kind="review" version="1">
---
verdict: request-changes
---

The recorder never flushes.
</section>
