crates/htui-core/tests/snapshots/prompt_render__section_failure_reason.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: "render::wrap(&render::failure_reason(&handoff.failure_reason))"
---
<section name="failure_reason">
The step exhausted its turn budget without a passing build.
</section>
